from structured_logging.processors.i_processor import IProcessor

class TimestampProcessor(IProcessor): ...